--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -1,4 +1,4 @@
-// @import "/src/styles/globals.scss";
+@import "variables";
 
 .header {
   $padding: 0.2rem;
@@ -10,25 +10,33 @@
   left: 0;
   display: flex;
   justify-content: space-between;
-  min-width: calc(100% - 2 * $padding);
+  flex-shrink: 0;
+  min-width: 100%;
   height: $height;
-  padding: $padding;
 
-  @media screen and (min-width: 768px) {
+  overflow: hidden;
+
+  @media screen and (min-width: $breakpoint) {
     height: 6rem;
     font-size: 6rem;
   }
 
   h1 {
+    padding: $padding;
+
     font-family: "Trail", sans-serif;
     font-size: 1em;
     font-weight: 400;
 
-    transition-property: font-variation-settings;
-    transition-timing-function: ease;
+    // transition-property: font-variation-settings;
+    // transition-timing-function: ease;
+
+    flex-shrink: 0;
   }
 
   div {
+    padding: $padding;
+
     height: calc(100% - 2 * $padding);
     background-color: black;
 
@@ -40,5 +48,7 @@
     // @supports not (aspect-ratio: 1) {
     //   padding-left: $icon-size;
     // }
+
+    flex-shrink: 0;
   }
 }
