--- a/src/styles/Gallery.module.scss
+++ b/src/styles/Gallery.module.scss
@@ -1,26 +1,14 @@
+@import "variables";
+
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-
-  position: absolute;
-  right: 0;
-  bottom: 0;
-
-  max-width: 75%;
-
-  overflow-y: hidden;
-
-  h3 {
-    width: 50%;
-
-    font-family: Helvetica, sans-serif;
-    font-weight: 400;
-  }
+  width: 100%;
 
   img {
     width: 100%;
-    max-height: 60vh;
-    flex-shrink: 0;
+    height: auto;
+  }
+
+  @media (min-width: $breakpoint) {
+    max-width: 80%;
   }
 }
