--- a/src/styles/Hero.module.scss
+++ b/src/styles/Hero.module.scss
@@ -12,10 +12,31 @@
 }
 
 .left {
-  padding-left: 0.4rem;
   h2 {
     font-family: "Trail", sans-serif;
     font-size: 3rem;
     word-wrap: break-word;
+  }
+}
+
+.right {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+
+  position: absolute;
+  right: 0;
+  left: 0;
+  bottom: 0;
+
+  padding-bottom: 1rem;
+
+  overflow-y: hidden;
+
+  h3 {
+    width: 100%/6;
+
+    font-family: Helvetica, sans-serif;
+    font-weight: 400;
   }
 }
