--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -7,6 +7,7 @@
 
 * {
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -22,4 +23,12 @@ h2 {
   font-weight: 400;
   color: $header-grey-col;
   mix-blend-mode: difference;
+}
+
+.row {
+  padding: 0 0.5rem;
+}
+
+.column {
+  padding: 0 -0.5rem;
 }
