--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -15,14 +15,32 @@ body {
   background: $grey;
 }
 
+// Headers
+
 h1 {
   color: $text-col;
 }
 
 h2 {
+  font-family: "Trail", sans-serif;
+  font-size: 4rem;
   font-weight: 400;
   color: $header-grey-col;
   mix-blend-mode: difference;
+}
+
+h3 {
+  font-family: Helvetica, sans-serif;
+  font-size: 3rem;
+  font-weight: 400;
+  color: $text-col;
+}
+
+h4 {
+  font-family: Helvetica, sans-serif;
+  font-size: 1.5rem;
+  font-weight: 400;
+  color: $text-col;
 }
 
 .row {
