--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -43,10 +43,16 @@ h4 {
   color: $text-col;
 }
 
+p {
+  font-family: Arial, Helvetica, sans-serif;
+  color: $text-col;
+}
+
 .row {
   padding: 0 0.5rem;
+  margin-bottom: 5rem;
 }
 
 .column {
-  padding: 0 -0.5rem;
+  margin: 0 0.5rem;
 }
