--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -43,6 +43,13 @@ h4 {
   color: $text-col;
 }
 
+h5 {
+  font-family: Helvetica, sans-serif;
+  font-size: 1.2rem;
+  font-weight: 400;
+  color: $text-col;
+}
+
 p {
   font-family: Arial, Helvetica, sans-serif;
   color: $text-col;
