--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,4 +1,4 @@
-@import "variables";
+@import "../../styles/variables";
 
 .container {
   position: relative;
@@ -24,11 +24,23 @@
   padding-bottom: 1rem;
 
   overflow-y: hidden;
+}
 
-  h3 {
-    width: 100%/6;
+.arrowContainer {
+  width: 3rem;
+  height: 3rem;
 
-    font-family: Helvetica, sans-serif;
-    font-weight: 400;
+  margin-right: 1rem;
+}
+
+.messageContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: last baseline;
+
+  max-width: 61.8%;
+
+  @media (min-width: $breakpoint) {
+    max-width: calc(100% / 3);
   }
 }
