--- a/src/components/Interlude/Interlude.module.scss
+++ b/src/components/Interlude/Interlude.module.scss
@@ -1,4 +1,4 @@
-@import "variables";
+@import "../../styles/variables";
 
 .container {
   position: relative;
@@ -32,11 +32,11 @@
   }
 }
 
-.arrow {
-  height: 2rem;
-  width: 2rem;
+.arrowContainer {
+  height: 3rem;
+  width: 3rem;
+
+  rotate: 270deg;
 
   flex-shrink: 0;
-
-  background: black;
 }
