--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -3,9 +3,11 @@
 .container {
   position: absolute;
   left: 0;
-  right: 0;
+  top: 0;
+  min-width: 100%;
 
   height: 100vh;
+  padding-top: 0.5rem;
 
   display: flex;
   flex-direction: column;
@@ -26,4 +28,8 @@
 .top {
   display: flex;
   justify-content: space-between;
+}
+
+.menuColumn {
+  width: calc((100% - 3rem) / 3);
 }
