--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -19,7 +19,7 @@
 
 .middleContainer {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   flex-direction: column;
 
   @media (min-width: $breakpoint) {
