--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -28,8 +28,14 @@
 .top {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .menuColumn {
-  width: calc((100% - 3rem) / 3);
+  margin-bottom: 1.5rem;
+  width: 100%;
+
+  @media (min-width: $breakpoint) {
+    width: calc((100% - 3rem) / 3);
+  }
 }
